--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
 
     <div class="menu">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdMbS2OZoS9e9jtpeE_VjmE0MkbY6RZS9ipgp7TQpRVTBBxfQ/viewform?usp=header" target="_blank">📝 Presensi Ekstrakurikuler</a>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSebiCh8IcoE_275pBY9hcEteH3u9s6snpsSiJHvDNi-JiDrXA/viewform?usp=header" target="_blank">📝 Presensi Anggota Dojo</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxNLV8wFqNxZuzC2bKLrpdHBPcO2-oA6DqnQ5GQ8aJpFBneA/viewform?usp=header" target="_blank">📝 Presensi Anggota Dojo</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfyeGBad59di33HZklMMpw42Ctbq6lWgB-gbo5hu93Nn9ZHwA/viewform?usp=header" target="_blank">📁 E-KARIB 2026</a>
         <a href="https://docs.google.com/spreadsheets/d/1jgP0Ni0Gqs5QwPz5-WW082ikOXqeLGo-TDyt6HR-e94/edit?usp=sharing" target="_blank">📄 Report E-KARIB 2026</a>
         <a href="https://lookerstudio.google.com/reporting/5e61eeae-284c-4133-bcc5-642f65b44a6f" target="_blank">📄 VIEW Rekap E-KARIB 2026</a>
         <a href="https://docs.google.com/spreadsheets/d/10tlc5pRd5Pc5LcWpp4jE9MjIcPax6RgaA8FRADR-1FA/edit?usp=sharing" target="_blank">📝 Data Anggota 2026</a>
-        <a href="https://docs.google.com/spreadsheets/d/10tlc5pRd5Pc5LcWpp4jE9MjIcPax6RgaA8FRADR-1FA/edit?usp=sharing" target="_blank">📄 Report Presensi Anggota Dojo</a>
+        <a href="https://lookerstudio.google.com/reporting/881facc4-2c32-4206-b957-47352c0b485a">📄 Report Presensi Anggota Dojo</a>
         <a href="https://docs.google.com/spreadsheets/d/1ynpowdS0g-luQl0HpFz6iV-cv4_w3PEXm1-pnNKk0lk/edit?usp=sharing">📄 Report Pendaftaran Anggota Baru</a>
         <a href="https://docs.google.com/spreadsheets/d/1OIBHfWD_hbwt4nPUewugBbuYPmj2Z7HilEAr8FgLE5I/edit?usp=sharing" target="_blank">📄 Report Pendaftaran UKT</a>
         <a href="#" class="logout" onclick="logout()">🚪 Logout</a>
@@ -136,3 +136,4 @@
 
 </body>
 </html>
+
