--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfyeGBad59di33HZklMMpw42Ctbq6lWgB-gbo5hu93Nn9ZHwA/viewform?usp=header" target="_blank">📁 E-KARIB 2026</a>
         <a href="https://docs.google.com/spreadsheets/d/1jgP0Ni0Gqs5QwPz5-WW082ikOXqeLGo-TDyt6HR-e94/edit?usp=sharing" target="_blank">📄 Report E-KARIB 2026</a>
         <a href="https://lookerstudio.google.com/reporting/5e61eeae-284c-4133-bcc5-642f65b44a6f" target="_blank">📄 VIEW Rekap E-KARIB 2026</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe2ALPOGxedrsf93LNjh455xImTyCQLRIbSYmcmcpCkjTqUqA/viewform?usp=header" target="_blank">📝 Form Input Laporan Keuangan Dojo 2026</a>
+        <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRbty-kMJZRApj0VT6Mu8_vSZ_RAeQBlCuIRc0M1kHUuQQZvGv2S1MS98RF7Q1ydPWpgwb_Bk1jnicd/pubhtml?gid=665734908&single=true" target="_blank">📁 REPORT LAPORAN KEUANGAN 2026</a>
         <a href="https://docs.google.com/spreadsheets/d/10tlc5pRd5Pc5LcWpp4jE9MjIcPax6RgaA8FRADR-1FA/edit?usp=sharing" target="_blank">📝 Data Anggota 2026</a>
         <a href="https://lookerstudio.google.com/reporting/881facc4-2c32-4206-b957-47352c0b485a">📄 Report Presensi Anggota Dojo</a>
         <a href="https://docs.google.com/spreadsheets/d/1ynpowdS0g-luQl0HpFz6iV-cv4_w3PEXm1-pnNKk0lk/edit?usp=sharing">📄 Report Pendaftaran Anggota Baru</a>
@@ -136,4 +138,5 @@
 
 </body>
 </html>
+
 
